--- a/NsCDE/share/config_templates/integration/firefox/nscdeChrome.css
+++ b/NsCDE/share/config_templates/integration/firefox/nscdeChrome.css
@@ -364,6 +364,7 @@ panelview toolbarbutton.subviewbutton {
   -moz-appearance: none !important;
   background-color: var(--nscde-bg-color-6) !important;
   color: var(--nscde-fg-color-6) !important;
+  border: 1px solid var(--nscde-bg-color-6) !important;
 }
 
 #BMB_bookmarksPopup .subviewbutton:hover,
